# imgix_technical_interview

./: LICENSE  README.md  setup.cfg
src/imgix_palette/: colorutils.py  palette.py
tests/: colortests.py  palettetests.py
