[metadata]
name = imgix-palette-atlawrie
version = 1.0.0
author = Alice Lawrie
author_email = atlawrie@gmail.com
description = imgix technical interview.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src